--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,29 +1,30 @@
 <div class="row">
     <h1>Experiencia laboral</h1>
+    <div class="col-lg-2">
+
+      <button type="button" class="btn btn-primary" routerLink="/nuevaexp" *ngIf="isLogged">
+        Nueva experiencia
+      </button>
+    </div>
+    
     <div class="col-lg-1"></div>
     <div class="col-lg-11">
-        <ul>
-          <li><h1> trabajo 1</h1>- 
-            <h3>años</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, debitis vitae ipsam dolorem odit accusamus eos, alias deserunt laboriosam neque saepe excepturi nemo suscipit, quam amet vero delectus mollitia! Nostrum.</p>
-          
-        </ul>
-        <ul>
-            <li><h1> trabajo 2</h1>- 
-              <h3>años</h3></li>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, debitis vitae ipsam dolorem odit accusamus eos, alias deserunt laboriosam neque saepe excepturi nemo suscipit, quam amet vero delectus mollitia! Nostrum.</p>
-            
-          </ul>
-          <ul>
-            <li><h1> trabajo 3</h1>- 
-              <h3>años</h3></li>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, debitis vitae ipsam dolorem odit accusamus eos, alias deserunt laboriosam neque saepe excepturi nemo suscipit, quam amet vero delectus mollitia! Nostrum.</p>
-            
-          </ul>
-          <ul>
-            <li><h1> trabajo 4</h1>-
-              <h3>años</h3></li>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, debitis vitae ipsam dolorem odit accusamus eos, alias deserunt laboriosam neque saepe excepturi nemo suscipit, quam amet vero delectus mollitia! Nostrum.</p>
-             
-          </ul>
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let Experiencia of expe">
+
+          <td><h4>{{Experiencia.nombreE}}</h4></td>
+
+          <td><h4>{{Experiencia.descripcionE}}</h4></td>
+
+          <td *ngIf="isLogged">
+            <button class= "btn btn-dark" routerLink="/editexp/{{Experiencia.id}}"><h4><i class="bi bi-pen"></i>Editar</h4></button></td>
+          <td *ngIf="isLogged">
+            <button class= "btn btn-danger" (click)="delete(Experiencia.id)"><h4><i class="bi bi-x-octagon"></i>Borrar</h4></button></td>
+        </tr>
+      </tbody>
+
+
+    </table>
+</div>
     </div>
