--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
         <img src="../../../assets/fotodeperfil.jpg" class="img-fluid" id="fotodeperfil" alt="">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <h1 id="nombre">Estela Abigail Guzman</h1>
+        <h1 id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
         <p> Full Stack Developer Jr</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
