--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -1,11 +1,17 @@
+
+
 .row{
-    padding: 20px;
+  padding: 20px;
 }
 div{
-    background-color:#05426b ;
-    color:white;
+  background-color:#05426b;
+  color:white;
 }
-h1, h3{
-  display: inline;  
-
+h1{
+  color: white;
+  display:inline;
+}
+h4{
+  color:white;
+  display: inline;
 }
