--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -6,11 +6,12 @@
 </div>
 <div class="redes">
     <div>
-        <a href=""><img src="../../../assets/facebook.png" id="facebook" alt=""></a>
-        <a href=""><img src="../../../assets/instagram.png" id="instagram" alt=""></a>
-        <a href=""><img src="../../../assets/twitter.png" id="twitter" alt=""></a>
-        <a href=""><img src="../../../assets/github.png" id="github" alt=""></a>
-        <a href=""><img src="../../../assets/linkedin.png" id="linkedin" alt=""></a>
+        <a href="https://wwww.facebook.com/abii.guzman1" target="_BLANK"> <img src="../../../assets/facebook.png" alt="facebook" title="facebook"></a>
+                <a href="https://github.com/AbigailGuz" target="_BLANK"> <img src="../../../assets/github.png" alt="github" title="github"></a>
+                <a href="https://www.instagram.com/Abigail.guzman2" target="_BLANK"> <img src="../../../assets/instagram.png" alt="instagram" title="instagram"></a>
+                <a href="https://www.linkedin.com/in/estela-abigail-guzman-563a4a26a/" target="_BLANK"> <img src="../../../assets/linkedin.png" alt="linkedin" title="linkedin"></a>
+                <a href="https://twitter.com/AbigailGuz13" target="_BLANK"> <img src="../../../assets/twitter.png" alt="twitter" title="twitter"></a>
+       
         <button type="button" class="btn btn-primary"(click)="login()" *ngIf="!isLogged">INGRESAR</button>
         <button type="button" class="btn btn-primary"(click)="onLogout()" *ngIf="isLogged">CERRAR SESION</button>
     </div>
