--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -1,9 +1,16 @@
 <div class="row">
+
   <h1>Hard & Soft skills</h1>
-    <div class=" text-center col-sm-4 col-md-4 col-lg-4">
+<div>
+  <button type="button" routerLink="/nuevaskill" class="btn btn-primary" *ngIf="isLogged">Nueva Skill</button>
+</div>
+
+    <div class=" text-center col-sm-4 col-md-4 col-lg-4" *ngFor="let skill of skill">
       <circle-progress
-      [percent]="(70)"
+      [percent]="(skill.porcentaje)"
       [radius]="80"
+      [title]="(skill.nombre)"
+      [titleColor]="'white'"
       [outerStrokeWidth]="10"
       [innerStrokeWidth]="8"
       [outerStrokeColor]="'green'"
@@ -14,6 +21,12 @@
       [titleFontSize]="'20'"
       [showUnits]="false"
       [showSubtitle]="false"
-    ></circle-progress> 
-     <div>
+    ></circle-progress>
+
+    <td *ngIf="isLogged">
+      <button class= "btn btn-dark" routerLink="/edithys/{{skill.id}}"><h4><i class="bi bi-pen"></i>Editar</h4></button></td>
+    <td *ngIf="isLogged">
+      <button class= "btn btn-danger" (click)="delete(skill.id)"><h4><i class="bi bi-x-octagon"></i>Borrar</h4></button></td>
+
+     
 </div>
